fix contrast

--- a/client-side/src/App.css
+++ b/client-side/src/App.css
@@ -152,3 +152,7 @@ dd {
 .home-btn {
 	float: left;
 }
+
+.submit-button{
+	background-color: #0072ee !important;
+}
